Ventana de añadir elementos creada.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <div class="left">Cosas que van a la izquierda, como el filtro o las categorias</div>
             <div class="shelf">vitrina, el contenedor de los objetos.
                 <div class="shelf--item">
-                    <h3>Título</h3>
-                    <p>Descripción muy descriptiva</p>
-                    <p>categoria</p>
-                    <p><img src="" alt="imagen descriptiva del producto."> La imagen se sube desde pc mediante un botón. </p>
+                    <h3 id="title" >Título</h3>
+                    <p id="description" >Descripción muy descriptiva</p>
+                    <p id="categorie" >categoria</p>
+                    <p><img id="img" src="" alt="imagen descriptiva del producto."> La imagen se sube desde pc mediante un botón. </p>   
                     <p>precio</p>
 
                 </div>
