--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset='UTF-8'>
         <title>Ecomer</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel='stylesheet' href='index.css'>
     </head>
     <body>
-        <script defer src="./index.js" ></script>
-        <header class="header">Cosas que van en cabecera</header>
-        <div class="principal">
-            <div class="left">Cosas que van a la izquierda, como el filtro o las categorias</div>
-            <div class="shelf">vitrina, el contenedor de los objetos.
-                <div class="shelf--item">
-                    <h3 id="title" >Título</h3>
-                    <p id="description" >Descripción muy descriptiva</p>
-                    <p id="categorie" >categoria</p>
-                    <p><img id="img" src="" alt="imagen descriptiva del producto."> La imagen se sube desde pc mediante un botón. </p>   
-                    <p>precio</p>
-
+        <script defer src='./index.js' ></script>
+        <header class='header'>Cosas que van en cabecera</header>
+        <div class='principal'>
+            <div class='left'>Cosas que van a la izquierda, como el filtro o las categorias</div>
+            <div class='shelf'>vitrina, el contenedor de los objetos.
+                <div class='shelf--item'>
+                    <h3 class="shelf__item--title" id='title' >Título</h3>
+                    <p class="shelf__item--description" id='description' >Descripción muy descriptiva</p>
+                    <p  class="shelf__item--categorie" id='categorie' >categoria</p>
+                    <p><img  class="shelf__item--img" id='img' src='' alt='imagen descriptiva del producto.'> La imagen se sube desde pc mediante un botón. </p>   
+                    <p class="shelf__item--price" >precio</p>
                 </div>
+                <button onclick='getData()' >Obtener Datos</button>
             </div>
         </div>
-        <footer class="footer">Cosas que van en el footer, Desarrollado por Mílton Canchón.</footer>
+        <footer class='footer'>Cosas que van en el footer, Desarrollado por Mílton Canchón.</footer>
     </body>
 </html>
