Se añadió la funcionalidad de añadir más imágenes al agregar un nuevo articulo.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <p><img  class="shelf__item--img" id='img' src='' alt='imagen descriptiva del producto.'> La imagen se sube desde pc mediante un botón. </p>   
                     <p class="shelf__item--price" >precio</p>
                 </div>
-                <button onclick='getData()' >Obtener Datos</button>
+                <!-- <button onclick='getData()' >Obtener Datos</button> -->
             </div>
         </div>
         <footer class='footer'>Cosas que van en el footer, Desarrollado por Mílton Canchón.</footer>
