--- a/newArticle.html
+++ b/newArticle.html
@@ -16,16 +16,20 @@
                     <input name="description" type="text" id="description">
                     <label for="categorie">agrega una categoria</label>
                     <input name="categorie" type="text" id="categorie">
-                    <label for="img">agrega una imagen</label>
-                    <!-- <div>
-                        <input name="imgone" type="text">
-                        <input name="img2" type="text">
-                        <input name="img3" type="text">
-
-                    </div> -->
-                    <input name="img" type="file" id="img">
                     <label for="price">¿Cuál es el precio?</label>
                     <input name="price" type="number">
+                    <div class="container--img" >
+                        <label for="img_principal">imagen principal</label>
+                        <input name="img_principal" type="file" >
+                        <label for="img_principal">imagen arriba</label>
+                        <input name="img_top" type="file" >
+                        <label for="img_principal">imagen derecha</label>
+                        <input name="img_right" type="file" >
+                        <label for="img_principal">imagen abajo</label>
+                        <input name="img_bottom" type="file" >
+                        <label for="img_principal">imagen izquierda</label>
+                        <input name="img_left" type="file" >
+                    </div>
                     <input type="submit" formtarget="_blank" >
                 </form>
             </section>
