Se creó la funcionalidad de modificar items.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel='stylesheet' href='index.css'>
     </head>
     <body>
-        <script defer src='./index.js' ></script>
+        <script defer src='./index.js' type="module" ></script>
         <header class='header'>Cosas que van en cabecera</header>
         <div class='principal'>
             <div class='left'>Cosas que van a la izquierda, como el filtro o las categorias</div>
