Funcionalidad de crear una nueva pestaña para mostar los detalles de un artículo creada.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./design/footer.css">
     </head>
     <body>
-        <script defer src='./index.js' type="module" ></script>
+        <script defer src='./index.js' ></script>
         <header class='header'>
             
             <div class="header--cabecera">
@@ -53,8 +53,8 @@
                 <hr>
             </div>
             <div class='shelf'>
-                <!-- <h2>Articulos en venta</h2> -->
-                <!-- <button onclick='getData()' >Obtener Datos</button> -->
+
+
             </div>
         </div>
         <footer class='footer'>Cosas que van en el footer, Desarrollado por Mílton Canchón.</footer>
