--- a/moreInformationArticles.html
+++ b/moreInformationArticles.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="./design/footer.css">
     </head>
     <body>
-        <script defer src="./moreInformation.js" ></script>
         <header class="header" style="height: 7rem;">
 
             <div class="header--cabecera">
@@ -36,34 +35,34 @@
                 </div>
             </div>
         </header>
-        <section class="principal">
+        <section id="principal_" class="principal" > 
 
-            <div class="cabecera">
+            <!-- <div class="cabecera">
 
                 <div class="cabecera--img">
 
-                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="Imagen descriptiva del producto">
+                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="${element.title}">
                 </div>
                 <div class="cabecera--img">
 
-                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="Imagen descriptiva del producto">
+                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="${element.title}">
                 </div>
                 <div class="cabecera--img">
 
-                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="Imagen descriptiva del producto">
+                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="${element.title}">
                 </div>
                 <div class="cabecera--img">
 
-                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="Imagen descriptiva del producto">
+                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="${element.title}">
                 </div>
                 <div class="cabecera--img">
 
-                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="Imagen descriptiva del producto">
+                    <img class="img" onclick="zoom()" src="./src/playa.jpg" alt="${element.title}">
                 </div>
             </div>
             <div class="principal_center">
 
-                <img src="./src/camara.jpg" alt="La misma imagen seleccionada de arriba pero más grande">
+                <img id="img_principal" src="./src/camara.jpg" alt="La misma imagen seleccionada de arriba pero más grande">
                 <section class="principal_center_information">
 
                     <div class="principal_center_information_details">
@@ -91,8 +90,9 @@
                     sssssssdsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
                     ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssddddddddddsdddddddddddddddddddddddddddddddddddddddddd
                     ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
-            </div>
+            </div> -->
         </section>
         <footer class="footer">Cosas que van en el footer, Desarrollado por Mílton Canchón.</footer>
+        <script src="./moreInformation.js" ></script>
     </body>
 </html>
